2011-04-14  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv.wine.nsi.in : Added gtkrc for more windows look.

2011-04-13  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv-settings.gob: Created settings for only seeing files of 
        the same type.

        * giv-settings.gob, giv-settings-editor.gob, giv-win.gob :
        Created persistant settings and an editor.

2011-04-12  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv-win.gob, giv-contrast.gob, giv-histo.gob : Moving over a gray level image updates the pointer triangle in the histogram.

2011-04-10  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv-win.gob : Made GL of integer formats show all values as integers.

2011-04-09  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv-histo.gob : Optimized generation of the contrast_changed
        signal so that it is only omitted if the contrast has actually
        changed.

2011-04-08  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv-win.gob : Fixed text drawing in caliper on windows.

        * png.c : Fixed error when reading 8-bit png images.

        * giv-win.gob : Made info label update when changing pixel size
        info.

2011-04-06  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * plugins/png.c : png plugin with support for 16-bit png files.

        * plugins/dcmtk/dcmdata/libsrc/SConscript: Turned of autogeneration of dcdictbi.cc.

        * tiff.c, giv_image.c, giv_image.h : Added support for 16 bit tiff images.

        * tiff.c : Added support for float (SAMPLEFORMAT_IEEEFP) images.

        * cfunix.h : Erased definition of size_to to fix Linux64 bit compilatin.

2011-04-05  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * Released version 0.9.18

        * Sconstruct: Created a dist command for generating distributions.

        * giv-win.gob : Created ifdef for windows as pango_cairo was severely broken.

        * giv-win.gob : Changed measure tool to a caliper.
