@@ -13,6 +13,24 @@
 
 #include <gtk/gtk.h>
 
+/** 
+ * The drawing callback is used for three purposes:
+ *
+ *  - Drawing a mask
+ *  - Drawing a label image (mapping of pixel to label). Used for
+ *    picking.
+ *  - Drawing the graphics
+ * 
+ * @param DovtkLassoDrawing 
+ * 
+ * @return 
+ */
+typedef enum {
+  DOVTK_LASSO_CONTEXT_PAINT,
+  DOVTK_LASSO_CONTEXT_MASK,
+  DOVTK_LASSO_CONTEXT_LABEL
+} DovtkLassoContext;
+  
 /**
  * Opaque handle for the lasso
  * 
@@ -22,17 +40,17 @@ typedef struct {
 
 /** 
  * Callback function for the lasso that paints the overlap. If
- * do_mask is true, then the drawing alpha channel of the drawing
- * will be used to determine whether the redraw that patch.
- * Typically lines will be drawn thicker when mask is on in
- * order to make sure that the corresponding patch is dirty.
+ * context == DOVTK_LASSO_CONTEXT_MASK, then the drawing alpha channel
+ * of the drawing will be used to determine whether the redraw
+ * that patch. Typically lines will be drawn thicker when mask is
+ * on in order to make sure that the corresponding patch is dirty.
  * 
  * @param DovtkLassoDrawing 
  * 
  * @return 
  */
 typedef void (*DovtkLassoDrawing)(cairo_t *cr,
-                                  gboolean do_mask,
+                                  DovtkLassoContext Context,
                                   gpointer user_data);
 
 
@@ -57,5 +75,32 @@ void dovtk_lasso_update(DovtkLasso *lasso);
  * @param lasso 
  */
 void dovtk_lasso_destroy(DovtkLasso *lasso);
+
+/** 
+ * Discards all the exprects.
+ * 
+ * @param lasso 
+ */
+void dovtk_lasso_clear_exprects(DovtkLasso *lasso);
+
+/** 
+ * Create exprects from the current callback
+ * 
+ * @param lasso 
+ */
+void dovtk_lasso_add_exprects_from_drawing_cb(DovtkLasso *lasso);
+
+/**
+ * Get label for a pixel according to the current drawing routine.
+ */
+int dovtk_lasso_get_label_for_pixel(DovtkLasso *lasso,
+                                    int col_idx, int row_idx);
+
+/**
+ * Set the color corresponding to a label.
+ */
+void dovtk_lasso_set_color_label(DovtkLasso *lasso,
+                                 cairo_t *cr,
+                                 int label);
 
 #endif /* DOVTK */
